--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=10, user-scalable=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google Fonts -->
+    <!-- ! Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +13,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet" />
-    <!-- CSS -->
+
+    <!-- ! CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Plazas De Mi Mami</title>
   </head>
