nuevo avance local desde el notebook

--- a/assets/private/agregar_empleado.html
+++ b/assets/private/agregar_empleado.html
@@ -96,8 +96,10 @@
       </aside>
 
       <!-- ! ========== MAIN ========== -->
+
       <main class="main">
         <h2>Agregar Usuario:</h2>
+        <div class="form_agregar">
         <!--Para cuadros de texto label-->
         <!--Label usa for para vincular a input-->
         <label for="Nombre">Nombres:</label>
@@ -107,30 +109,24 @@
 
         <label for="Apellido">Apellidos:</label>
         <input id="Apellido" type="text" placeholder="Jara" />
-
         <label for="Rut">Rut:</label>
         <input id="Rut" type="text" placeholder="00.000.000-0" />
-
         <label for="Direccion">Direccion </label>
         <input id="Direccion" type="text" placeholder="Avenida Kong 367, Nintendo" />
-
         <label for="Nacimiento"> Fecha de Nacimiento </label>
         <input id="Nacimiento" type="text" placeholder="03-01-01" />
-
         <!---->
-
         <label for="Numero">Numero Telefonico: </label>
         <input id="Numero" type="text" placeholder="978904532" />
-
         <label for="Correo">Correo Electronico:</label>
         <input id="Correo" type="text" placeholder="Luquitasbcspn@Gmail.com" />
-
-        <button>Crear Usuario</button>
-        <button>Cancelar</button>
+      </div>
+      <div class="btn--agr--eli">
+        <input type="reset" value="Cancelar" />
+        <button class="btn--agr--product">Agregar</button>
+      </div>
       </main>
-
-      <!-- ! ========== FOOTER ========== -->
-
+      <!-- ! ========== FOOTER ========== --> 
       <footer class="footer">
         <p>&copy; 2024 Plazas De Mi Mami</p>
       </footer>
