update styles for LOGIN and change some code for JS

--- a/assets/public/agregar_producto.html
+++ b/assets/public/agregar_producto.html
@@ -75,10 +75,10 @@
 
       <aside class="sidebar--section">
         <!-- ! Búsqueda solo por texto -->
-        <search class="productos--container">
-          <form class="container--row">
+        <search class="search--container">
+          <form class="search--form">
             <button class="search--btn">
-              <!-- TODO: agregar icono de busqueda -->
+              <i class="bi bi-search"></i>
             </button>
             <input
               class="search--bar"
@@ -88,6 +88,11 @@
           </form>
           <div class="search--result"></div>
         </search>
+        <ul>
+          <li><a href="inventario.html"> Productos </a></li>
+          <li><a href="proveedores.html"> Proveedores</a></li>
+          <li><a href="../private/empleados.html"> Empleados</a></li>
+        </ul>
         <!-- TODO: productos o inventario? -->
         <div class="productos--container">
           <a href="inventario.html" class="button--aside">
