--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ! Google Fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,12 +14,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet" />
 
-    <!-- ! CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Plazas De Mi Mami</title>
   </head>
   <body>
-    <!-- ! ========== MAIN ========== -->
+    <!-- ========== MAIN ========== -->
 
     <div class="container--login">
       <main class="main--login--section">
@@ -34,39 +34,34 @@
             <h1>Plazas de mi Mami</h1>
             <h2>Bienvenido</h2>
             <form id="login--form" class="login--form" method="post">
-              <label for="username" class="form--label">Usuario:</label>
+              <label for="usernameLogin" class="form--label">Usuario:</label>
               <input
-                id="username"
+                id="usernameLogin"
                 class="form--input radius--sm"
-                name="username"
+                name="usernameLogin"
                 type="text"
                 placeholder="admin10"
                 required />
-              <label for="password" class="form--label">Contraseña:</label>
+              <label for="passwordLogin" class="form--label">Contraseña:</label>
               <!-- TODO: agregar un icon-eye/button para mostrar o ocultar la password -->
               <input
-                id="password"
+                id="passwordLogin"
                 class="form--input radius--sm"
-                name="password"
+                name="passwordLogin"
                 type="password"
                 placeholder="********"
                 required />
               <button class="btn btn--full radius--sm" type="submit">Ingresar</button>
-              <!-- TODO: debemos crear otra vista o modal para cambiar la contraseña -->
               <button id="btn--open--modal" class="btn btn--outline radius--sm">
                 Cambiar contraseña
               </button>
-              <!-- <a href="#" id="btn--open--modal" class="btn btn--link btn--outline radius--sm">
-                Cambiar contraseña
-              </a> -->
             </form>
           </div>
         </div>
       </main>
 
-      <!-- ! ========== MODAL ========== -->
+      <!-- ========== MODAL ========== -->
 
-      <!-- <div class="overlay hidden"></div> -->
       <dialog id="modal--login" class="modal--login--section">
         <header>
           <button id="btn--close--modal" class="btn--icon--primary">
@@ -111,19 +106,18 @@
             placeholder="********"
             required />
           <button class="btn btn--full radius--sm" type="submit">Cambiar</button>
-          <!-- TODO: debemos crear otra vista o modal para cambiar la contraseña -->
           <button class="btn btn--outline radius--sm" type="reset">Limpiar</button>
         </form>
       </dialog>
 
-      <!-- ! ========== FOOTER ========== -->
+      <!-- ========== FOOTER ========== -->
 
       <footer class="footer--login--section">
         <p>&copy; 2024 Plazas De Mi Mami</p>
       </footer>
     </div>
 
-    <!-- ! ========== JS ========== -->
+    <!-- ========== JS ========== -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
