update styles for SEARCH in SIDEBAR - inventario.html

--- a/assets/public/inventario.html
+++ b/assets/public/inventario.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- CDN Bootstrap Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-
-    <!-- Google Fonts -->
+    <!-- ----------- GOOGLE FONTS ----------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,12 +15,14 @@
       rel="stylesheet" />
 
     <!-- CSS -->
+    <!-- ----------- GOOGLE FONTS ----------- -->
     <link rel="stylesheet" href="../css/style.css" />
     <title>Inventario | Plazas De Mi Mami</title>
   </head>
   <body>
     <div class="container--grid">
-      <!-- ! HEADER ----------------------------------------------- -->
+      <!-- ----------- HEADER ----------- -->
+
       <header class="header--section">
         <div class="header--link--box">
           <a class="center--row" href="../../index.html">
@@ -65,7 +62,8 @@
         </div>
       </header>
 
-      <!-- ! SIDEBAR ----------------------------------------------- -->
+      <!-- ----------- SIDEBAR ----------- -->
+
       <aside class="sidebar--section">
         <search class="search container--row">
           <input class="search--bar" placeholder="Leche ..." autocomplete="off" type="text" />
@@ -115,6 +113,9 @@
             <p>Empleados</p>
           </a>
         </div> -->
+
+        <!-- ----------- NAVBAR ----------- -->
+
         <nav class="nav--main">
           <ul class="nav--main--list">
             <li>
@@ -165,7 +166,7 @@
         </nav>
       </aside>
 
-      <!-- ! MAIN ----------------------------------------------- -->
+      <!-- ----------- MAIN ----------- -->
 
       <main class="main--section">
         <header>
@@ -208,7 +209,9 @@
             </form>
           </div>
         </header>
-        <!-- ! Tabla de Productos-->
+
+        <!-- ----------- TABLA INVENTARIO ----------- -->
+
         <table class="table">
           <thead>
             <tr>
@@ -300,8 +303,9 @@
             </tr>
           </tbody>
         </table>
-        <!-- TODO: hacer modal para MODIFICAR producto -->
-        <!-- ! Modal: modificar producto -->
+
+        <!-- ----------- MODAL: MODIFICAR PRODUCTO ----------- -->
+
         <dialog>
           <h2>Detalles del Producto</h2>
           <form action="">
@@ -351,7 +355,7 @@
         </dialog>
       </main>
 
-      <!-- ! FOOTER ----------------------------------------------- -->
+      <!-- ----------- FOOTER ----------- -->
 
       <footer class="footer--section">
         <p>&copy; 2024 Plazas De Mi Mami</p>
