--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google Fonts -->
+    <!-- ----------- GOOGLE FONTS ----------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,12 +14,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet" />
 
-    <!-- CSS -->
+    <!-- ----------- CSS ----------- -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Plazas De Mi Mami</title>
   </head>
   <body>
-    <!-- ========== MAIN ========== -->
+    <!-- ----------- MAIN ----------- -->
 
     <div class="container--login">
       <main class="main--login--section">
@@ -60,7 +60,7 @@
         </div>
       </main>
 
-      <!-- ========== MODAL ========== -->
+      <!-- ----------- MODAL LOGIN ----------- -->
 
       <dialog id="modal--login" class="modal--login--section">
         <header>
@@ -110,7 +110,7 @@
         </form>
       </dialog>
 
-      <!-- ========== FOOTER ========== -->
+      <!-- ----------- FOOTER ----------- -->
 
       <footer class="footer--login--section">
         <p>&copy; 2024 Plazas De Mi Mami</p>
