--- a/assets/public/inventario.html
+++ b/assets/public/inventario.html
@@ -135,7 +135,6 @@
                 <span>Inventario</span>
               </a>
             </li>
-
             <li>
               <a class="nav--main--link center--row" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
@@ -143,7 +142,6 @@
                     fill="currentColor"
                     d="M24 14.6c0 .6-1.2 1-2.6 1.2c-.9-1.7-2.7-3-4.8-3.9c.2-.3.4-.5.6-.8h.8c3.1-.1 6 1.8 6 3.5M6.8 11H6c-3.1 0-6 1.9-6 3.6c0 .6 1.2 1 2.6 1.2c.9-1.7 2.7-3 4.8-3.9zm5.2 1c2.2 0 4-1.8 4-4s-1.8-4-4-4s-4 1.8-4 4s1.8 4 4 4m0 1c-4.1 0-8 2.6-8 5c0 2 8 2 8 2s8 0 8-2c0-2.4-3.9-5-8-5m5.7-3h.3c1.7 0 3-1.3 3-3s-1.3-3-3-3c-.5 0-.9.1-1.3.3c.8 1 1.3 2.3 1.3 3.7c0 .7-.1 1.4-.3 2M6 10h.3C6.1 9.4 6 8.7 6 8c0-1.4.5-2.7 1.3-3.7C6.9 4.1 6.5 4 6 4C4.3 4 3 5.3 3 7s1.3 3 3 3" />
                 </svg>
-
                 <span>Proveedores</span>
               </a>
             </li>
@@ -170,17 +168,12 @@
 
       <main class="main--section">
         <header>
-          <!-- TODO: productos o inventario? -->
-          <h2>Productos</h2>
-          <button>Agregar producto</button>
-          <button>Eliminar producto(s)</button>
-          <!-- ! Búsqueda avanzada con filtros -->
-          <!-- debe estar oculto, y solo ser visible cuando se haga "click" en el botón "Buscar" -->
-          <div class="search-filters none">
+          <h1>Productos</h1>
+          <div class="search-filters">
             <form method="post">
-              <label for="search-department">Departamento:</label>
+              <!-- <label for="search-department">Departamento:</label> -->
               <select id="search-department" name="department">
-                <option value="0">Tipo de departamento...</option>
+                <option value="0" disabled selected>Departamento</option>
                 <option value="Abarrotes">Abarrotes</option>
                 <option value="Lácteos">Lácteos</option>
                 <option value="Frutas">Frutas</option>
@@ -189,23 +182,38 @@
                 <option value="Congelados">Congelados</option>
                 <option value="Productos de limpieza">Productos de limpieza</option>
               </select>
-              <label for="search-brand">Marca:</label>
+              <!-- <label for="search-brand">Marca:</label> -->
               <select id="search-brand" name="brand">
-                <option value="0">Tipo de marca ...</option>
+                <option value="0" disabled selected>Marca</option>
                 <option value="Coca-Cola">Coca-Cola</option>
                 <option value="Colun">Colun</option>
                 <option value="Nescafe">Nescafe</option>
                 <option value="Soprole">Soprole</option>
                 <option value="Tucapel">Tucapel</option>
               </select>
-              <label for="search-type-sale">Tipo de venta:</label>
+              <!-- <label for="search-type-sale">Tipo de venta:</label> -->
               <select id="search-type-sale" name="type-sale">
-                <option value="0">Tipo de venta ...</option>
+                <option value="0" disabled selected>Tipo de venta</option>
                 <option value="Gramos">Gramos (g)</option>
                 <option value="Kilogramos">Kilogramos (kg)</option>
                 <option value="Unidad">Unidad (u)</option>
                 <option value="Litros">Litros (lt)</option>
               </select>
+              <button class="btn" type="submit">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-funnel-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5z" />
+                </svg>
+                Filtrar Busqueda
+              </button>
+              <a class="btn" href="./agregar_producto.html">Agregar Producto</a>
+              <button class="btn">Eliminar productos</button>
             </form>
           </div>
         </header>
