--- a/assets/public/agregar_producto.html
+++ b/assets/public/agregar_producto.html
@@ -33,23 +33,22 @@
   </head>
   <body>
     <div class="container--grid">
-      <!-- ! ========== HEADER ========== -->
+      <!-- ----------- HEADER ----------- -->
 
       <header class="header--section">
-        <div class="header--title--box">
+        <div class="header--link--box">
           <a class="center--row" href="../../index.html">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
+              width="48"
+              height="48"
               fill="currentColor"
               class="bi bi-shop"
               viewBox="0 0 16 16">
               <path
                 d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z" />
             </svg>
-            <!-- <i class="bi bi-shop"></i> -->
-            <h1>Plazas de mi Mami</h1>
+            <span>Plazas de mi Mami</span>
           </a>
         </div>
         <div class="header--user--box">
@@ -57,69 +56,115 @@
             <p>Admin</p>
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-person-circle"
-              viewBox="0 0 16 16">
-              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-              <path
-                fill-rule="evenodd"
-                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+              width="48"
+              height="48"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-user-circle">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+              <path d="M12 10m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+              <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
             </svg>
           </a>
         </div>
       </header>
 
-      <!-- ! ========== SIDEBAR ========== -->
+      <!-- ----------- SIDEBAR ----------- -->
 
       <aside class="sidebar--section">
-        <!-- ! Búsqueda solo por texto -->
-        <search class="search--container">
-          <form class="search--form">
-            <button class="search--btn">
-              <i class="bi bi-search"></i>
-            </button>
-            <input
-              class="search--bar"
-              placeholder="Buscar un producto..."
-              autocomplete="off"
-              type="text" />
-          </form>
+        <search class="search container--row">
+          <input class="search--bar" placeholder="Leche ..." autocomplete="off" type="text" />
+          <div class="search--icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-search"
+              viewBox="0 0 16 16">
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+            </svg>
+          </div>
+          <button class="btn--search">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-right-short"
+              viewBox="0 0 16 16">
+              <path
+                fill-rule="evenodd"
+                d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8" />
+            </svg>
+          </button>
           <div class="search--result"></div>
         </search>
-        <ul>
-          <li><a href="inventario.html"> Productos </a></li>
-          <li><a href="proveedores.html"> Proveedores</a></li>
-          <li><a href="../private/empleados.html"> Empleados</a></li>
-        </ul>
-        <!-- TODO: productos o inventario? -->
-        <div class="productos--container">
-          <a href="inventario.html" class="button--aside">
-            <!-- TODO: agregar icono de codigo de barras -->
-            <p>Inventario</p>
-          </a>
-        </div>
-        <div class="productos--container">
-          <a href="proveedores.html" class="button--aside">
-            <!-- TODO: agregar icono de varios usuarios -->
-            <p>Proveedores</p>
-          </a>
-        </div>
-        <div class="productos--container">
-          <a href="../private/empleados.html" class="button--aside">
-            <!-- TODO: agregar icono de empleados -->
-            <p>Empleados</p>
-          </a>
-        </div>
+
+        <!-- ----------- NAVBAR ----------- -->
+
+        <nav class="nav--main">
+          <ul class="nav--main--list">
+            <li>
+              <a class="nav--main--link center--row" href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-clipboard-data-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z" />
+                  <path
+                    d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5zM10 8a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1" />
+                </svg>
+                <span>Inventario</span>
+              </a>
+            </li>
+            <li>
+              <a class="nav--main--link center--row" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+                  <path
+                    fill="currentColor"
+                    d="M24 14.6c0 .6-1.2 1-2.6 1.2c-.9-1.7-2.7-3-4.8-3.9c.2-.3.4-.5.6-.8h.8c3.1-.1 6 1.8 6 3.5M6.8 11H6c-3.1 0-6 1.9-6 3.6c0 .6 1.2 1 2.6 1.2c.9-1.7 2.7-3 4.8-3.9zm5.2 1c2.2 0 4-1.8 4-4s-1.8-4-4-4s-4 1.8-4 4s1.8 4 4 4m0 1c-4.1 0-8 2.6-8 5c0 2 8 2 8 2s8 0 8-2c0-2.4-3.9-5-8-5m5.7-3h.3c1.7 0 3-1.3 3-3s-1.3-3-3-3c-.5 0-.9.1-1.3.3c.8 1 1.3 2.3 1.3 3.7c0 .7-.1 1.4-.3 2M6 10h.3C6.1 9.4 6 8.7 6 8c0-1.4.5-2.7 1.3-3.7C6.9 4.1 6.5 4 6 4C4.3 4 3 5.3 3 7s1.3 3 3 3" />
+                </svg>
+                <span>Proveedores</span>
+              </a>
+            </li>
+            <li>
+              <a class="nav--main--link center--row" href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-people-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                </svg>
+                <span>Empleados</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
       </aside>
 
-      <!-- ! ========== MAIN ========== -->
+      <!-- ----------- MAIN ----------- -->
 
       <main class="main--section">
-        <h2>Agregar Producto</h2>
-        <form method="post">
-          <div class="form_agregar">
+        <header>
+          <h1 class="title">Agregar Producto</h1>
+        </header>
+        <form class="form--add--product" method="post">
+          <div class="form_agregar grid grid--2--cols">
             <label for="product-name">Nombre del producto:</label>
             <input id="product-name" type="text" name="product_name" />
             <label for="product_department">Departamento:</label>
@@ -158,15 +203,15 @@
             <input id="product-amount" type="number" name="product_amount" />
             <label for="product-min-amount">Cantidad minima:</label>
             <input id="product-min-amount" type="number" name="product_min_amount" />
+            <!-- TODO: agregar icono para limipiar -->
+            <input type="reset" value="Limpiar" />
+            <!-- TODO: agregar icono para agregar usuario -->
+            <button class="btn--agr--product">Agregar</button>
           </div>
-          <!-- TODO: agregar icono para limipiar -->
-          <input type="reset" value="Limpiar" />
-          <!-- TODO: agregar icono para agregar usuario -->
-          <button class="btn--agr--product">Agregar</button>
         </form>
       </main>
 
-      <!-- ! ========== FOOTER ========== -->
+      <!-- ----------- FOOTER ----------- -->
 
       <footer class="footer--section">
         <p>&copy; 2024 Plazas De Mi Mami</p>
